--- a/framework/drmf.dox
+++ b/framework/drmf.dox
@@ -1,5 +1,5 @@
 /* **********************************************************
- * Copyright (c) 2012-2013 Google, Inc.   All rights reserved.
+ * Copyright (c) 2012-2014 Google, Inc.   All rights reserved.
  * **********************************************************/
 
 /*
@@ -44,6 +44,8 @@ DynamoRIO Extension libraries:
    <br>Detailed system call parameter monitoring
  - Umbra
    <br>Shadow memory mapping and shadow value propagation (<em>coming soon</em>)
+ - \subpage page_drsymcache
+   <br>Persistent caching of symbol lookup data
  - Dr. Malloc
    <br>Memory allocation tracking (<em>coming soon</em>)
  - Dr. Callstack
