--- a/drmemory/docs/main.dox
+++ b/drmemory/docs/main.dox
@@ -1,5 +1,5 @@
 /* **********************************************************
- * Copyright (c) 2012-2013 Google, Inc.  All rights reserved.
+ * Copyright (c) 2012-2014 Google, Inc.  All rights reserved.
  * Copyright (c) 2009 VMware, Inc.  All rights reserved.
  * **********************************************************/
 
@@ -32,8 +32,8 @@ and heap underflow and overflow), accesses to freed memory, double frees,
 memory leaks, and (on Windows) access to un-reserved thread local storage
 slots.
 
-Dr. Memory operates on unmodified application binaries running on Windows
-or Linux \if VMX86_SERVER or ESXi \endif on commodity IA-32 and AMD64
+Dr. Memory operates on unmodified application binaries running on Windows,
+Mac, or Linux \if VMX86_SERVER or ESXi \endif on commodity IA-32 and AMD64
 hardware.  Dr. Memory currently targets 32-bit applications only.
 
 This document describes how to use Dr. Memory.  It is divided into the
