i#1440, DrSyscall on MacOS: add drsys_cur_syscall_result()
Arranges drsys_syscall_succeeded() to return
DRMF_ERROR_FEATURE_NOT_AVAILABLE on MacOS and adds a replacement dynamic
routine (so it can use the mcontext to see the flags) which also optionally
returns the (64-bit) value and (normalized) errno:

drmf_status_t
drsys_cur_syscall_result(void *drcontext, OUT bool *success, OUT uint64 *value,
                         OUT uint *errno);

Changes all usage in our code base to use the new routine.

SVN-Revision: 1786

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -85,6 +85,9 @@ The changes between \TOOL_VERSION and version 1.6.1 include:
    placing leaks it's not sure about in potential_errors.txt.
  - Added preliminary shadowing of xmm registers for better Visual Studio
    2013 support
+ - Added preliminary shadowing of mmx registers
+ - Augmented Dr. Syscall to provide MacOS support by adding
+   drsys_cur_syscall_result().
  - The pause in cmd on a frontend error is now bypassable by -batch
  - Various bug fixes
 
