--- a/drsyscall/drsyscall.dox
+++ b/drsyscall/drsyscall.dox
@@ -42,6 +42,7 @@ part of the Dr. Memory Framework.
  - \ref sec_drsyscall_setup
  - \ref sec_drsyscall_events
  - \ref sec_drsyscall_API
+ - \ref sec_drsyscall_nums
 
 \section sec_drsyscall_setup Setup
 
@@ -114,5 +115,23 @@ results, elminating the need for the caller to specifically request the top
 32 bits in such cases.  For setting the result value of a system call,
 currently \p drsyscall does not provide its own routine and
 dr_syscall_set_result_ex() should be used.
+
+\section sec_drsyscall_nums System Call Numbers
+
+On Linux, the system call number is the standard number exported by the
+kernel.  For \p SYS_ioctl, a secondary number indicates the request code.
+\p drsyscall does not currently split the 32-bit SYS_socketcall or IPC
+system calls into secondary numbers.
+
+On Windows, \p drsyscall uses the raw number from the eax register.  This
+includes the WOW64 index stored in the upper 16 bits on Windows 8 and
+beyond.  Secondary numbers are used for \p NtUserCall* system calls.
+
+For MacOS, whether 32-bit or 64-bit, we normalize the system call number to
+a positive integer with the top 8 bits set to 0x1 for a Mach system call,
+0x3 for Machdep, and 0x0 for BSD (allowing the direct use of SYS_
+constants).  The user can access the raw eax register in the pre-syscall
+event to view the unmodified number, whose encoding varies depending on the
+bitwidth and interrupt vector used.
 
 */
