i#1440, DrSyscall on MacOS: 64-bit arg values
Rather than break compatibility, we add drsys_arg_t.value64 at the end
(only we allocate drsys_arg_t) and deprecate drsys_arg_t.value.

Similarly, we add drsys_pre_syscall_arg64() and deprecate
drsys_pre_syscall_arg().

Internally, we widen pt->sysarg[] to 64-bit, and make sure to skip ahead to
match DR's ordinals when handling 64-bit args on 32-bit MacOS.

Updates the drsyscall tests.

SVN-Revision: 1788

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -86,8 +86,9 @@ The changes between \TOOL_VERSION and version 1.6.1 include:
  - Added preliminary shadowing of xmm registers for better Visual Studio
    2013 support
  - Added preliminary shadowing of mmx registers
- - Augmented Dr. Syscall to provide MacOS support by adding
-   drsys_cur_syscall_result().
+ - Augmented the Dr. Syscall API for MacOS support by adding
+   drsys_cur_syscall_result(), drsys_arg_t.value64, and
+   drsys_pre_syscall_arg64().
  - The pause in cmd on a frontend error is now bypassable by -batch
  - Various bug fixes
 
