--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -79,18 +79,20 @@ The changes between \TOOL_VERSION and version 1.6.1 include:
    #umbra_shadow_memory_type_t rather than uint.
  - Clarified the #umbra_map_options_t flags field to be
    #umbra_map_flags_t rather than uint.
- - Added static library versions of drsyscall and umbra
+ - Added static library versions of drsyscall and umbra.
  - On Windows, handle leak detection (-check_handle_leaks) is now on by default
    in full mode.  However, it is still experimental and conservative,
    placing leaks it's not sure about in potential_errors.txt.
  - Added preliminary shadowing of xmm registers for better Visual Studio
-   2013 support
- - Added preliminary shadowing of mmx registers
+   2013 support.
+ - Added preliminary shadowing of mmx registers.
  - Augmented the Dr. Syscall API for MacOS support by adding
    drsys_cur_syscall_result(), drsys_arg_t.value64, and
    drsys_pre_syscall_arg64().
- - The pause in cmd on a frontend error is now bypassable by -batch
- - Various bug fixes
+ - The pause in cmd on a frontend error is now bypassable by -batch.
+ - Added an option -exit_code_if_errors to return a non-zero exit code
+   when errors are detect.
+ - Various bug fixes.
 
 The changes between version 1.6.1 and version 1.6.0 include:
  - Added Windows 8.1 support
