Fix improper placement of Handle Leaks docs page
SVN-Revision: 1854

--- a/drmemory/docs/errors.dox
+++ b/drmemory/docs/errors.dox
@@ -58,6 +58,7 @@ in \ref page_leaks.
   - \subpage page_invarg
   - \subpage page_leaks
   - \subpage page_gdi
+  - \subpage page_handle
   - \subpage page_warning
 
 ********************
